feat: bring up JC3636W518C display and add LVGL page gestures

--- a/esp32-firmware/platformio.ini
+++ b/esp32-firmware/platformio.ini
@@ -1,5 +1,8 @@
 [env:esp32-s3-devkit]
-platform = espressif32
+platform = https://github.com/pioarduino/platform-espressif32/releases/download/53.03.11/platform-espressif32.zip
+platform_packages =
+    platformio/framework-arduinoespressif32@https://github.com/espressif/arduino-esp32.git#3.1.1
+    platformio/framework-arduinoespressif32-libs@https://dl.espressif.com/AE/esp-arduino-libs/esp32-3.1.1-h.zip
 board = esp32-s3-devkitc-1
 framework = arduino
 
@@ -8,16 +11,24 @@ board_build.arduino.memory_type = qio_opi
 board_build.partitions = huge_app.csv
 
 ; 编译选项
+build_unflags =
+    -std=gnu++11
+
 build_flags =
     -DBOARD_HAS_PSRAM
     -DARDUINO_USB_CDC_ON_BOOT=1
+    -Iinclude
     -DLV_CONF_INCLUDE_SIMPLE
     -DLV_LVGL_H_INCLUDE_SIMPLE
+    -std=gnu++17
 
 ; 库依赖
 lib_deps =
     lvgl/lvgl@^8.3.0
     bblanchon/ArduinoJson@^6.21.0
     links2004/WebSockets@^2.4.0
+    https://github.com/esp-arduino-libs/esp-lib-utils.git#v0.2.0
+    https://github.com/esp-arduino-libs/ESP32_IO_Expander.git#v1.1.1
+    https://github.com/esp-arduino-libs/ESP32_Display_Panel.git#v1.0.4
 
 monitor_speed = 115200
