feat: sync electron and esp32 updates (wallpaper config, sd preview, voice/simulator improvements)

--- a/esp32-firmware/platformio.ini
+++ b/esp32-firmware/platformio.ini
@@ -27,6 +27,7 @@ lib_deps =
     lvgl/lvgl@^8.3.0
     bblanchon/ArduinoJson@^6.21.0
     links2004/WebSockets@^2.4.0
+    earlephilhower/ESP8266Audio@^1.9.7
     https://github.com/esp-arduino-libs/esp-lib-utils.git#v0.2.0
     https://github.com/esp-arduino-libs/ESP32_IO_Expander.git#v1.1.1
     https://github.com/esp-arduino-libs/ESP32_Display_Panel.git#v1.0.4
